[tool.poetry]
name = "dash"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
discord = "^1.0.1"
mysqlclient = "^1.4.6"
psycopg2 = "^2.8.4"
click = "^7.0"
inquirer = "^2.6.3"
sqlalchemy = "^1.3.11"
alembic = "^1.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
